# haikuports

./: .gitattributes  .gitignore  .hgignore  .travis.yml  CONTRIBUTING.md  FormatVersions  LICENSE.md  README.md  ReadMe.md  ayat_tafasir_data-0.0.1.recipe  ccleste-1.4.0.recipe  haikuwebkit-1.5.1.recipe  hexvexed-0.0.1(1).recipe  hexvexed-0.0.1.recipe  libsndfile-1.0.28-git.recipe  lint-new-recipes.sh  sanity-0.6.recipe
.github/: lint-new-recipes.sh  pull_request_template.md
.github/workflows/: autobuilder.yml  lint.yml
additional-files/: Drawpile.iom  Drawpile.rdef
app-accessibility/espeak/: espeak-1.48.04.recipe
app-accessibility/festival/: festival-2.4.recipe
app-accessibility/flite/: flite-2.0.0.recipe  flite-2.1.recipe  flite-2.2.recipe
app-accessibility/haikutts/: haikutts-1.0.recipe
app-accessibility/piper/: pipertts-1.0.recipe
app-accessibility/pipert/: pipertts-1.0.recipe
app-accessibility/pipertts/: pipertts-1.0.recipe
app-accessibility/speech_tools/: speech_tools-2.4.recipe
app-admin/chrpath/: chrpath-0.16.recipe
app-admin/conky/: conky-1.11.6_pre.recipe  conky-1.19.2.recipe  conky-1.19.6.recipe  conky-master.recipe
app-admin/kc/: kc-2.5.1.recipe
app-admin/keepassx/: keepassx-2.0a4.git.recipe  keepassx-2.0a5.recipe  keepassx-2.0a6.recipe
app-admin/keepassxc/: keepassxc-2.1.0.recipe  keepassxc-2.2.0.recipe  keepassxc-2.2.4.recipe  keepassxc-2.3.4.recipe  keepassxc-2.5.4.recipe  keepassxc-2.6.2.recipe  keepassxc-2.7.12.recipe
app-admin/pass/: pass-1.7.4.recipe
app-admin/pwgen/: pwgen-2.06.bep  pwgen-2.06.recipe  pwgen-2.06.sh  pwgen-2.08.recipe
app-admin/testdisk/: testdisk-7.0_git.recipe  testdisk-7.1.recipe  testdisk-7.1_git.recipe  testdisk-7.1~git.recipe  testdisk-7.2.recipe  testdisk-7.2~wip.recipe
app-antivirus/clamav/: clamav-1.2.0.recipe  clamav-1.4.1.recipe  clamav-1.4.2.recipe  clamav-1.5.1.recipe
app-antivirus/clamav-gui/: clamav_gui-1.0.9.recipe  clamav_gui-1.1.8.recipe  clamav_gui-1.2.2.recipe
app-arch/ancient/: ancient-1.0.recipe  ancient-2.0.0.recipe  ancient-2.1.1.recipe
app-arch/arc/: arc-5.21o.bep  arc-5.21o.recipe  arc-5.21p.recipe  arc-5.21q.recipe  arc.OptionalPackageDescription
app-arch/arj/: arj-3.10.22.recipe
app-arch/atool/: atool-0.39.0.recipe
app-arch/brotli/: brotli-1.0.2.recipe  brotli-1.0.3.recipe  brotli-1.0.4.recipe  brotli-1.0.5.recipe  brotli-1.0.6.recipe  brotli-1.0.7.recipe  brotli-1.0.9.recipe  brotli-1.1.0.recipe  brotli-1.2.0.recipe
app-arch/bzip2/: bzip2-1.0.4.bep  bzip2-1.0.5-1.build  bzip2-1.0.5-1.install  bzip2-1.0.5.bep  bzip2-1.0.5.recipe  bzip2-1.0.5.sh  bzip2-1.0.6.bep  bzip2-1.0.6.recipe  bzip2-1.0.8.recipe  bzip2.OptionalPackageDescription
app-arch/bzip3/: bzip3-1.5.1.recipe
app-arch/cabextract/: cabextract-1.11.recipe  cabextract-1.2.bep  cabextract-1.2.recipe  cabextract-1.3.bep  cabextract-1.3.recipe  cabextract-1.4.recipe  cabextract-1.6.recipe  cabextract-1.7.recipe  cabextract-1.8.recipe  cabextract-1.9.1.recipe  cabextract-1.9.recipe  cabextract.OptionalPackageDescription
app-arch/cpio/: cpio-2.10.bep  cpio-2.10.recipe  cpio-2.11.bep  cpio-2.11.recipe  cpio-2.12.recipe  cpio-2.13.recipe  cpio-2.14.recipe  cpio-2.15.recipe  cpio.OptionalPackageDescription
app-arch/easylzma/: easylzma-0.0.7.recipe
app-arch/exomizer/: exomizer-2.0.7.recipe  exomizer-2.0.9.recipe  exomizer-3.1.1.recipe  exomizer-3.1.2.recipe
app-arch/fastjar/: fastjar-0.97.sh  (+3 more)
app-editors/lite-xl/additional-files/lua/: meson.build  meson_options.txt
dev-games/: ._sidreloc
dev-libs/irrxml/additional-files/: Makefile.am  configure.ac  irrxml.pc.in
dev-util/sidreloc/additional-files/: Makefile.am  configure.ac
games-action/: OpenClonk  openclonk-7.0  openclonk-7.0.recipe
games-puzzle/: monsterz  monsterz-0.7.1.recipe
haiku-apps/: beaim-1.5.6.recipe
heartofthealien/: heartofthealien-1.2.2.recipe
kde-base/: marble-1.9.2.recipe
kde-frameworks/: bump-kde-frameworks.sh  bumpKF6-frameworks.sh
sci-astronomy/wcstools/additional-files/: Makefile.am  Makefile.libwcs.am  configure.ac  wcstools.pc.in
(+27638 files in other folders)
